mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mongodb-deployment
 labels:
  app: mongo
spec:
 replicas: 1
 selector:
  matchLabels:
   app: mongo
 template:
  metadata:
   labels:
    app: mongo
  spec:
   containers:
   - name: mongodb
     image: mongo
     ports:
     - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
 name: mongodb-service
spec:
 selector:
  app: mongo
 ports:
 - protocol: TCP
   port: 27017
   targetPort: 27017
